--- a/12-Advanced Python Modules/References 12-Advanced Python Modules.ipynb
+++ b/12-Advanced Python Modules/References 12-Advanced Python Modules.ipynb
@@ -9,11 +9,105 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Collections Module"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Counter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Used to count number of occurences in an object. \n",
+    "counter(mylist)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "mlist = [12,34,\"Hello\",\"Hello\",\"45\",34,34,1,1,1,1,3,3,3,6,6,6,9,9,9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({12: 1, 34: 3, 'Hello': 2, '45': 1, 1: 4, 3: 3, 6: 3, 9: 3})"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Counter(mlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'a': 6, 'b': 5, 'h': 7, 'i': 4, 'j': 6, 'm': 4, 'k': 7})"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Counter('aaaaaabbbbbhhhhhhhiiiijjjjjjmkkkkkkkmmm')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "heading_collapsed": true
    },
    "source": [
-    "# OS Module"
+    "#### Counting word in a sentence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "senternce = \"How many times does each word show up in this sentence with a word\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "newlist = senternce.split()"
    ]
   },
   {
@@ -21,6 +115,173 @@
    "metadata": {
     "hidden": true
    },
+   "source": [
+    "Counter(newlist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "output of the above. \n",
+    "\n",
+    "\n",
+    "    Counter({'How': 1,\n",
+    "             'many': 1,\n",
+    "             'times': 1,\n",
+    "             'does': 1,\n",
+    "             'each': 1,\n",
+    "             'word': 2,\n",
+    "             'show': 1,\n",
+    "             'up': 1,\n",
+    "             'in': 1,\n",
+    "             'this': 1,\n",
+    "             'sentence': 1,\n",
+    "             'with': 1,\n",
+    "             'a': 1})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Most common words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('word', 2),\n",
+       " ('How', 1),\n",
+       " ('many', 1),\n",
+       " ('times', 1),\n",
+       " ('does', 1),\n",
+       " ('each', 1),\n",
+       " ('show', 1),\n",
+       " ('up', 1),\n",
+       " ('in', 1),\n",
+       " ('this', 1),\n",
+       " ('sentence', 1),\n",
+       " ('with', 1),\n",
+       " ('a', 1)]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Counter(newlist).most_common()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "output:\n",
+    "       \n",
+    "            [('word', 2),\n",
+    "             ('How', 1),\n",
+    "             ('many', 1),\n",
+    "             ('times', 1),\n",
+    "             ('does', 1),\n",
+    "             ('each', 1),\n",
+    "             ('show', 1),\n",
+    "             ('up', 1),\n",
+    "             ('in', 1),\n",
+    "             ('this', 1),\n",
+    "             ('sentence', 1),\n",
+    "             ('with', 1),\n",
+    "             ('a', 1)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Default dictionary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "mydict = {'a' : 100, 'b':200 , 'c' : 500   }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "mydict['f']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------------------------------------------------\n",
+    "KeyError                                  Traceback (most recent call last)\n",
+    "Input In [45], in <cell line: 1>()\n",
+    "----> 1 mydict['f']\n",
+    "\n",
+    "KeyError: 'f'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    To avoid above error we can automatically inject the default value against a dictionary key:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "from collections import defaultdict\n",
+    "mydict = defaultdict(lambda: 0 )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "mydict['f']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# OS Module"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "    import os\n",
     "    os.listdir()\n",
@@ -34,9 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
