--- a/12-Advanced Python Modules/References 12-Advanced Python Modules.ipynb
+++ b/12-Advanced Python Modules/References 12-Advanced Python Modules.ipynb
@@ -9,9 +9,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "# Collections Module"
+    "# 1 . Collections Module"
    ]
   },
   {
@@ -20,7 +22,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "## Counter"
+    "# 1 . 1 Counter"
    ]
   },
   {
@@ -312,7 +314,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
@@ -376,7 +377,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "# OS Module"
+    "# 2 . OS Module"
    ]
   },
   {
@@ -409,7 +410,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "# Datetime Module\n"
+    "# 3 . Datetime Module\n"
    ]
   },
   {
@@ -448,7 +449,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "# Moving files around"
+    "# 4 . Moving files around"
    ]
   },
   {
@@ -490,7 +491,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "# Walking through a directory"
+    "# 5 . Walking through a directory"
    ]
   },
   {
@@ -639,7 +640,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "# Math and random Module"
+    "# 6 . Math and random Module"
    ]
   },
   {
@@ -653,13 +654,138 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "hidden": true
    },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "\n",
-    "## Rand number"
+    "# 6 . 1 . Rand number"
    ]
   },
   {
@@ -713,11 +839,307 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6 . 2 Random Seed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random.randint(0,100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.seed(101)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random.randint(0,100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74\n",
+      "24\n",
+      "69\n",
+      "45\n",
+      "59\n"
+     ]
+    }
+   ],
+   "source": [
+    "random.seed(101)\n",
+    "for i in range(5): \n",
+    "#     print(f\" Loop number : {i}\"  )\n",
+    "    print (random.randint(0,100) )\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " ...........................  \n",
+      "91\n",
+      "58\n",
+      "92\n",
+      "89\n",
+      " ...........................  \n",
+      " ...........................  \n",
+      "94\n",
+      "27\n",
+      "88\n",
+      "9\n",
+      " ...........................  \n",
+      " ...........................  \n",
+      "77\n",
+      "94\n",
+      "15\n",
+      "83\n",
+      " ...........................  \n",
+      " ...........................  \n",
+      "48\n",
+      "59\n",
+      "43\n",
+      "86\n",
+      " ...........................  \n",
+      " ...........................  \n",
+      "15\n",
+      "62\n",
+      "10\n",
+      "16\n",
+      " ...........................  \n",
+      " ...........................  \n",
+      "28\n",
+      "74\n",
+      "3\n",
+      "5\n",
+      " ...........................  \n",
+      " ...........................  \n",
+      "28\n",
+      "13\n",
+      "88\n",
+      "16\n",
+      " ...........................  \n",
+      " ...........................  \n",
+      "77\n",
+      "66\n",
+      "37\n",
+      "23\n",
+      " ...........................  \n",
+      " ...........................  \n",
+      "95\n",
+      "52\n",
+      "93\n",
+      "74\n",
+      " ...........................  \n",
+      " ...........................  \n",
+      "92\n",
+      "86\n",
+      "53\n",
+      "29\n",
+      " ...........................  \n",
+      " ...........................  \n",
+      "100\n",
+      "84\n",
+      "73\n",
+      "98\n",
+      " ...........................  \n",
+      " ...........................  \n",
+      "79\n",
+      "31\n",
+      "11\n",
+      "47\n",
+      " ...........................  \n",
+      " ...........................  \n",
+      "25\n",
+      "74\n",
+      "27\n",
+      "88\n",
+      " ...........................  \n",
+      " ...........................  \n",
+      "79\n",
+      "65\n",
+      "60\n",
+      "32\n",
+      " ...........................  \n",
+      " ...........................  \n",
+      "91\n",
+      "36\n",
+      "27\n",
+      "96\n",
+      " ...........................  \n",
+      " ...........................  \n",
+      "67\n",
+      "58\n",
+      "67\n",
+      "24\n",
+      " ...........................  \n",
+      " ...........................  \n",
+      "90\n",
+      "67\n",
+      "37\n",
+      "5\n",
+      " ...........................  \n",
+      " ...........................  \n",
+      "61\n",
+      "18\n",
+      "16\n",
+      "53\n",
+      " ...........................  \n",
+      " ...........................  \n",
+      "65\n",
+      "32\n",
+      "12\n",
+      "61\n",
+      " ...........................  \n",
+      " ...........................  \n",
+      "44\n",
+      "12\n",
+      "84\n",
+      "89\n",
+      " ...........................  \n"
+     ]
+    }
+   ],
+   "source": [
+    "random.seed(103)\n",
+    "for i in range(20): \n",
+    "#     print(f\" Loop number : {i}\"  )\\\n",
+    "    print (\" ...........................  \")\n",
+    "    print (random.randint(0,100) )\n",
+    "    print (random.randint(0,100) )\n",
+    "    print (random.randint(0,100) )\n",
+    "    print (random.randint(0,100) )\n",
+    "    print (\" ...........................  \")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reference:\n",
+    "       \n",
+    "       https://www.youtube.com/watch?v=mZiwtDYrpO8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Numpy Library    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NumPy forms the basis of powerful machine learning libraries like scikit-learn and SciPy. As machine learning grows, so does the list of libraries built on NumPy. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "heading_collapsed": true
    },
    "source": [
-    "# Python Debugger"
+    "# 7 . Python Debugger"
    ]
   },
   {
@@ -860,7 +1282,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "# Zip and Unzip files "
+    "# 8 . Zip and Unzip files "
    ]
   },
   {
@@ -927,7 +1349,7 @@
    "hash": "708e9726cfefdb058dac500d861d58f3238e7c30de202ec5233c4f8b6d763e57"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -941,7 +1363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
